# keeweb-connect

./: .editorconfig  .eslintrc.json  .gitignore  LICENSE  README.md  jsconfig.json  manifest.dev.json  manifest.edge.json  manifest.firefox.json  manifest.json  manifest.safari.json  native-manifest.json  package-lock.json  package.json  release-notes.md  tsconfig.json  webpack.config.js  webpack.config.ts
.github/: gen_ff_jwt.js  publish-firefox  publish-firefox-addon.js
.github/workflows/: ci.yaml  publish-firefox.yml  publish-test.yml  verify.yaml
_locales/cs/: messages.json
_locales/de/: messages.json
_locales/en_US/: messages.json
_locales/es/: messages.json
_locales/fr/: messages.json
_locales/ja/: messages.json
_locales/lv/: messages.json
_locales/nl/: messages.json
_locales/nl-NL/: messages.json
_locales/pl/: messages.json
_locales/uk/: messages.json
_locales/zh_CN/: messages.json
_locales/zh_TW/: messages.json
docs/: keeweb-connect-protocol.md
native-manifests/: chrome.json  firefox.json
native-messaging-host/: CMakeLists.txt  Makefile
native-messaging-host/src/: native-messaging-host.cpp
native-messaging-host/test/: native-messaging-host-test.mjs
pages/: options.html
scripts/: .eslintrc.json  bump-version.ts  download-translations.ts
src/background/: backend.ts  commands.ts  httpAuth.ts  init.ts  internal-ipc.ts  ui.ts  utils.ts
src/common/: backend-connection-state.ts  background-interface.ts  connected-database.ts  content-script-interface.ts  features.ts  utils.ts  (+2 more)
styles/: options.css
xcode/: Makefile
(+38 files in other folders)
